Bug 1613566 - Use layersId to find the target hit testing tree node for scroll thumb dragging. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D104893